[workspace]
resolver = "2"
members = [
    "ecs",
    "physics", 
    "aerodynamics",
    "rl_interface",
    "simulator"
]

[workspace.dependencies]
# Math and physics
nalgebra = "0.32"
vek = "0.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
bincode = "1.3"

# Visualization (optional for later phases)
macroquad = "0.4"

# Python bindings (for RL integration)
pyo3 = "0.20"
maturin = "1.4"

# Utilities
thiserror = "1.0"
anyhow = "1.0"

[profile.dev]
opt-level = 1  # Slight optimization for better performance during development

[profile.release]
opt-level = 3
lto = true
codegen-units = 1