[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simulator"
path = "src/main.rs"

[dependencies]
# Workspace crates
ecs = { path = "../ecs" }
physics = { path = "../physics" }
aerodynamics = { path = "../aerodynamics" }
rl_interface = { path = "../rl_interface" }

# Workspace dependencies
nalgebra = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
